--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,246 @@
-*{
-    margin: 0 ;
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Anton+SC&family=Chela+One&family=Chewy&family=Dancing+Script:wght@400..700&family=Doto:wght@100..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Galada&family=Indie+Flower&family=Lemon&family=Mr+De+Haviland&family=Noto+Serif+Bengali:wght@100..900&family=Permanent+Marker&family=Petit+Formal+Script&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Revolution&family=Ranchers&family=Shadows+Into+Light&family=Tiro+Bangla:ital@0;1&family=Walter+Turncoat&family=Yatra+One&display=swap');
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+#main-container {
+    width: 100%;
+}
+
+#header-container {
+    background: linear-gradient(to right, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%,
+            #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    color: gainsboro;
+}
+
+#header-hero {
+    width: 80%;
+    margin: auto;
+}
+
+#buble-1 {
+    background: rgba(255, 255, 255, 0.01);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    position: absolute;
+    animation: play 30s infinite ease-in;
+    box-shadow: 0 0 25px purple inset;
+}
+
+@keyframes play {
+    0% {
+        box-shadow: 0 0 25px purple inset;
+        transform: red translateX(0) translateY(0px);
+    }
+
+    20% {
+        box-shadow: 0 0 25px red inset;
+        transform: translateX(300px) translateY(243px);
+    }
+
+    30% {
+        box-shadow: 0 0 25px pink inset;
+        transform: translateX(100%) translateY(140px);
+    }
+
+    40% {
+        box-shadow: 0 0 25px violet inset;
+        transform: translateX(300px) translateY(0);
+    }
+
+    50% {
+        box-shadow: 0 0 25px purple inset;
+        transform: translateX(100px) translateY(243px);
+    }
+
+    60% {
+        box-shadow: 0 0 25px red inset;
+        transform: translateX(0) translateY(180px);
+    }
+
+    70% {
+        box-shadow: 0 0 25px pink inset;
+        transform: translateX(200px) translateY(0);
+    }
+
+    80% {
+        box-shadow: 0 0 25px violet inset;
+        transform: translateX(524px) translateY(170px);
+    }
+
+    90% {
+        box-shadow: 0 0 25px red inset;
+        transform: translateX(300px) translateY(243px);
+    }
+}
+
+/*=============================================
+=            Header and navigation section            =
+=============================================*/
+
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: last baseline;
+}
+
+.logo-container {
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+}
+
+.logo>img {
+    width: 100%;
+    height: 50px;
+}
+
+.dialogue {
+    text-align: left;
+    margin-left: 5px;
+}
+
+.dialogue>p {
+    font-size: 1.5rem;
+
+}
+
+.navbar {
+    width: 80%;
+    display: flex;
+    margin: auto;
+    justify-content: right;
+    align-items: flex-start;
+
+}
+
+nav {
+    width: 80%;
+}
+
+nav>ul {
+    display: inline;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul>li {
+    font-family: "Anton SC", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+    display: inline;
+    list-style: none;
+    letter-spacing: 2px;    
+}
+
+a{
+    text-decoration: none;
+    color: gainsboro;
+}
+
+#download {
+    background-color: #4CAF50;
+    padding-top: 4px;
+    color: aliceblue;
+    text-align: center;
+    height: 6vh;
+    width: 20vh;    
+    background: linear-gradient(to bottom, #a90329 0%, #8f0222 44%, #6d0019 100%);
+    border-radius: 20px;
+}
+
+/*=====  End of Header and navigation section  ======*/
+
+.hero-container {
+    display: flex;
+}
+
+.title {
+    width: 50%;
+    margin-top: 5%;    
+}
+
+.title > h1 {
+    font-size: 7em;
+    text-transform: uppercase;
+}
+.title > span {
+    color: coral;
+    font-size: 2em;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
+
+.photo {
+    width: 50%;
+    display: flex;
+    justify-content: right;
+}
+.photo > img{
+    max-width: 100%;
+    height: auto;
+}
+
+.photo > div{
+    width: 8%;
+    justify-content: right;    
+}
+.steam {
+    position: absolute;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin-top: 300px;
+    margin-right: 21%;
+    z-index: 0;
+    opacity: 0;
+  }
+  
+  #steam1 {
+    -webkit-animation: steam1 4s ease-out infinite;
+    animation: steam1 4s ease-out infinite;
+  }
+  
+  #steam3 {
+    -webkit-animation: steam1 4s ease-out 1s infinite;
+    animation: steam1 4s ease-out 1s infinite;
+  }
+  
+  @-webkit-keyframes steam1 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.2;}
+    100% {transform: translateY(-200px) translateX(-20px) scale(1); opacity: 0;}
+  }
+  
+  @keyframes steam1 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.2;}
+    100% {transform: translateY(-200px) translateX(-20px) scale(1); opacity: 0;}
+  }
+  
+  #steam2 {
+    -webkit-animation: steam2 4s ease-out 0.5s infinite;
+    animation: steam2 4s ease-out 0.5s infinite;
+  }
+  
+  #steam4 {
+    -webkit-animation: steam2 4s ease-out 1.5s infinite;
+    animation: steam2 4s ease-out 1.5s infinite;
+  }
+  
+  @-webkit-keyframes steam2 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.2;}
+    100% {transform: translateY(-200px) translateX(20px) scale(1); opacity: 0;}
+  }
+  
+  @keyframes steam2 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.2;}
+    100% {transform: translateY(-200px) translateX(20px) scale(1); opacity: 0;}
+  }
