--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@
 }
 
 .logo>img {
-  width: 100%;
+  max-width: 100%;
   height: 6vh;
 }
 
@@ -267,7 +267,7 @@ nav>ul {
   justify-content: space-evenly;
 }
 
-ul>li {
+nav>ul>li {
   font-family: "Anton SC", serif;
   font-weight: 400;
   font-style: normal;
@@ -536,7 +536,10 @@ a {
 
 .img-slide {
   width: 50%;
+}
 
+.img-slide>img {
+  max-width: 100%;
 }
 
 .details-me {
@@ -585,7 +588,7 @@ td {
   padding: 8px;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
   background-color: #dddddd;
 }
 
@@ -601,10 +604,9 @@ td:nth-child(odd) {
       #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
   color: gainsboro;
   height: 200px;
-  margin: auto;
+  margin-top: 60px;
+
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
 }
 
 .grid-container {
@@ -615,6 +617,7 @@ td:nth-child(odd) {
 }
 
 .grid-item {
+  padding-left: 120px;
   display: flex;
   width: 50%;
   display: flex;
@@ -632,4 +635,113 @@ td:nth-child(odd) {
   font-size: 1.5vw;
   padding: 1.5vh 0 0 2vh;
   text-transform: uppercase;
+}
+
+#works {
+  margin-top: 100px;
+}
+
+.port-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.port-title>h2 {
+  color: coral;
+  letter-spacing: 1vw;
+  font-size: 2vw;
+  text-transform: uppercase;
+}
+
+.port-title>h1 {
+  color: #2b2b2b;
+  letter-spacing: .5vw;
+  font-size: 3vw;
+  text-transform: uppercase;
+}
+
+.my-work-grid {
+  display: grid;
+  width: 80%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: auto;
+}
+
+.work-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.work-item>img {
+  max-width: 100%;
+}
+
+#footer {
+  background: linear-gradient(to right, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%,
+      #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+  color: gainsboro;
+
+}
+
+#footer-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 300px;
+  padding-top: 80px;
+  width: 80%;
+  margin: auto;
+}
+
+input[type="email"] {
+  display: inline-block;
+  width: 100%;
+  padding: 18px 36px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  height: 70px;
+  margin-top: 18px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.06);
+}
+
+input,
+input::-webkit-input-placeholder {
+  font-size: 16px;
+  line-height: 3;
+}
+
+.bt {
+  margin-left: -160px;
+  font-size: 16px;
+  display: inline-block;
+  font-weight: 600;
+  padding: 16px 32px;
+  border-radius: 20px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  background-color: #48b774;
+  color: #fff;
+}
+
+.footer-logo-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+}
+
+.footer-menu {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-menu > ul >li{
+  margin-bottom: 10px;
 }
