--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@
 
 /*=====  End of Social media links  ======*/
 
+
+/* Go to top button */
+
+
 #go-to-top {
   position: fixed;
   border-radius: 6px;
@@ -71,6 +75,10 @@
   opacity: 1;
 }
 
+
+/* main container */
+
+
 #main-container {
   width: 100%;
 }
@@ -86,13 +94,16 @@
   margin: auto;
 }
 
+
+/* Hero item start */
+
+
+
 #header-hero {
   padding-left: 20px;
   width: 80%;
   margin: auto;
 }
-
-/* Seventh Button */
 
 #button {
   display: inline-flex;
@@ -157,6 +168,11 @@
   }
 } */
 
+/*=============================================
+=            Bubble animation            =
+=============================================*/
+
+
 #buble-1 {
   background: rgba(255, 255, 255, 0.01);
   width: 150px;
@@ -213,6 +229,10 @@
     transform: translateX(300px) translateY(243px);
   }
 }
+
+
+/*=====  End of Bubble animation  ======*/
+
 
 /*=============================================
 =            Header and navigation section            =
@@ -295,6 +315,8 @@ a {
 
 /*=====  End of Header and navigation section  ======*/
 
+
+/* Hero title started */
 .hero-container {
   display: flex;
 }
@@ -442,6 +464,9 @@ a {
   }
 }
 
+
+/* About section */
+
 .content {
   /* width: 100vw;
   height: 100vh; */
@@ -577,7 +602,7 @@ a {
 }
 
 table {
-  width: 100%;
+  max-width: 100%;
   font-size: 2vh;
   border-collapse: collapse;
 }
@@ -597,6 +622,9 @@ td:nth-child(odd) {
 }
 
 /*=====  End of About me section  ======*/
+
+
+/* Our Achievement */
 
 
 .achieve-container {
@@ -636,6 +664,10 @@ td:nth-child(odd) {
   padding: 1.5vh 0 0 2vh;
   text-transform: uppercase;
 }
+
+
+/* Our Workflow */
+
 
 #works {
   margin-top: 100px;
@@ -678,6 +710,161 @@ td:nth-child(odd) {
   max-width: 100%;
 }
 
+.work-item:hover{
+  transform: scale(1.1);
+}
+
+
+/* Our Services */
+
+
+#service {
+  margin-top: 100px;
+}
+
+.service-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 80%;
+  margin: auto;
+  padding-bottom: 5vh;
+}
+
+.service-item {
+  display: flex;
+  margin: 2vh;
+  padding: 4vh;
+  box-shadow: 0px 5px 15px 0px rgba(7, 7, 7, 0.06);
+}
+
+.service-item:nth-child(even) {
+  padding-left: 50px;
+}
+
+.service-para {
+  padding-left: 20px;
+}
+
+.service-para>h1 {
+  color: coral;
+}
+
+.service-para>p {
+  text-align: justify;
+  line-height: 5vh;
+  font-size: 1vw;
+  color: #686767;
+}
+
+.service-item:hover {
+  box-shadow: 0px 5px 15px 0px rgba(7, 8, 8, .5)
+}
+
+
+/* Contact form */
+
+
+#contact {
+  margin-top: 100px;
+  width: 80%;
+  margin: auto;
+
+  h1 {
+    text-align: center;
+    color: black;
+    letter-spacing: .2vw;
+    font-size: 3vw;
+    text-transform: uppercase;
+    margin-bottom: 4vh;
+
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
+
+#contact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contact-item {
+  padding: 20px;
+}
+
+.sub-con-item {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.fa-item {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: coral;
+  font-size: 1.5vw;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+
+}
+
+.adress-item {
+  padding-left: 2vh;
+  line-height: 4vh;
+}
+
+.adress-item>h2 {
+  margin-bottom: 10px;
+}
+
+.form-control {  
+  margin:0 2vh 2vh 0;
+  /* max-width: 400px; */
+  /* background-color: lightgray;
+  color: #2c2c2c; */
+  letter-spacing: 1px;
+}
+
+.form-group{
+  display: flex;
+}
+
+textarea{
+  max-width: 400px;
+}
+
+.send-button {
+  margin-top: 15px;
+  height: 34px;
+  width: 400px;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+  padding-top: 7px;
+  background-color: coral;
+}
+
+.alt-send-button {
+  width: 400px;
+  height: 34px;
+  transition: all .2s ease-in-out;
+}
+
+.alt-send-button:hover {
+  transform: translate3d(0px, -29px, 0px);
+}
+
+.send-text {
+  display: block;
+  margin-top: 10px;
+  font: 700 12px 'Lato', sans-serif;
+  letter-spacing: 2px;
+}
+
+/* Footer section */
 #footer {
   background: linear-gradient(to right, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%,
       #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
@@ -694,7 +881,7 @@ td:nth-child(odd) {
   margin: auto;
 }
 
-input[type="email"] {
+.footer-email {
   display: inline-block;
   width: 100%;
   padding: 18px 36px;
@@ -737,11 +924,20 @@ input::-webkit-input-placeholder {
 
 .footer-menu {
   display: flex;
-
   justify-content: center;
   align-items: center;
 }
 
-.footer-menu > ul >li{
+.footer-menu>ul>li {
   margin-bottom: 10px;
 }
+
+
+/*=============================================
+=            Responsive area            =
+=============================================*/
+
+
+
+/*=====  End of Responsive area  ======*/
+
